<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alejandro.app1.LoginActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/goMainMenuActivity"
            style="?android:textAppearanceSmall"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/action_quit"
            android:textStyle="bold" />
    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:weightSum="1"
        android:background="@android:color/darker_gray">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/companyList"
            android:layout_margin="4dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/portfolioButton"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_portfolio"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_weight="1" />

        <Button
            android:id="@+id/standingsButton"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_standings"
            android:textStyle="bold"
            android:layout_row="22"
            android:layout_column="1"
            android:layout_weight="1.00" />

    </LinearLayout>

</LinearLayout>